--- a/vignettes/iSEEpathways.Rmd
+++ b/vignettes/iSEEpathways.Rmd
@@ -135,7 +135,7 @@ rownames(cnts) <- names(feature_stats)
 se <- SummarizedExperiment(assay = list(counts = cnts))
 
 se <- embedPathwaysResults(fgseaRes, se, name = "fgsea", class = "fgsea", pathwayType = "GO",
-                           pathways = pathways, stats = feature_stats)
+                           pathwaysList = pathways, featuresStats = feature_stats)
 
 app <- iSEE(se, initial = list(
   PathwaysTable(ResultName="fgsea", PanelWidth = 6L),
