fix some warnings

--- a/vignettes/iSEEpathways.Rmd
+++ b/vignettes/iSEEpathways.Rmd
@@ -98,6 +98,7 @@ library("iSEE")
 
 # Example data ----
 
+set.seed(1)
 simulated_data <- simulateExampleData()
 
 pathways_list <- simulated_data[["pathwaysList"]]
